[package]
name = "logdna-agent-config"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[dependencies]
#agent
agent-core = { package = "logdna-agent-core", path = "../logdna-agent-core" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
globber = "0.1"
regex = "1"
lazy_static = "1"
flate2 = "1"