[package]
name = "logdna-agent-fs"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[dependencies]
#agent
agent-core = { package = "logdna-agent-core", path = "../logdna-agent-core" }
#io
inotify = "0.7"
#error
quick-error = "1"
#utils
regex = "1"
globber = "0.1.2"
lazy_static = "1"
crossbeam = "0.7"
chashmap = "2"
num_cpus = "1"
either = "1"
#logging
log = "0.4"